# gnome-task-scheduler

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh
core/: Cargo.toml
core/src/: lib.rs  snapshot.rs
daemon/: Cargo.toml
daemon/src/: cron_root.rs  main.rs  openrc_root.rs  service.rs  systemd_root.rs
gui/: Cargo.toml
gui/src/: app.rs  error_log.rs  main.rs
gui/src/platform/: css.rs  mod.rs  theme.rs
gui/src/scheduler/: autostart.rs  cron_user.rs  detect.rs  mod.rs  systemd_root_proxy.rs  systemd_user.rs
gui/src/ui/: app_picker.rs  device_picker.rs  mod.rs  new_task_dialog.rs  schedule_builder.rs  task_library.rs
packaging/: README.md  org.linux.TaskScheduler.conf  org.linux.TaskScheduler.policy  task-scheduler-daemon.service  task-scheduler.desktop
packaging/aur/task-scheduler/: PKGBUILD  task-scheduler.install
packaging/aur/task-scheduler-git/: PKGBUILD
packaging/deb/: README.md
packaging/deb/debian/: changelog  control  copyright  rules  task-scheduler.postinst  task-scheduler.postrm  task-scheduler.prerm
packaging/rpm/: README.md  task-scheduler.spec
